Working on adding update and delete transaction